--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   },
   "dependencies": {
     "gatsby": "^3.8.1",
+    "gatsby-image": "^3.9.0",
     "gatsby-plugin-sass": "^4.9.0",
+    "gatsby-plugin-sharp": "^3.9.0",
+    "gatsby-source-filesystem": "^3.9.0",
+    "gatsby-transformer-sharp": "^3.9.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
