--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "dotenv": "^8.6.0",
     "gatsby": "^3.8.1",
     "gatsby-image": "^3.9.0",
+    "gatsby-plugin-image": "^1.9.0",
     "gatsby-plugin-sass": "^4.9.0",
     "gatsby-plugin-sharp": "^3.9.0",
+    "gatsby-source-datocms": "^2.6.16",
     "gatsby-source-filesystem": "^3.9.0",
     "gatsby-transformer-remark": "^4.6.0",
     "gatsby-transformer-sharp": "^3.9.0",
