--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "gatsby-transformer-sharp": "^3.9.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "2.3.2",
